packages/test_track/lib/src/errors/assignment_bucket_out_of_range_exception.dart
import 'package:test_track/src/errors/test_track_exception.dart';

class AssignmentBucketOutOfRangeException implements TestTrackException {}
